tests/fixtures/valid/run_region.lby
fn main -> i64
    region config_pool: size=4096, align=16, kind=static
    region scratch: size=1024, kind=dynamic, mutable=true
    42
