tests/fixtures/invalid/region_bad_align.lby
fn main -> i64
    region pool: size=1024, align=15
    0
